# VOLTE4GFAX

./: .config  .config.old  Config.in  Config.in.temp  Config_orig.in  Makefile  README.md  ReadmeBuild  ciou_flte_version_update  ciouflteversion.txt  list_primary.txt  list_secondary.txt  make_complete_image.sh  make_rootfs.sh  make_sec_rootfs.sh  multi_delete.sh  rules.mk  ugw_version  version
ciou_flte_factory_default/: gphy_firmware.img  ifx_cgi_system.c  openwrt_factory_reset_config
ciou_flte_factory_default/initscripts/: boot  dwatch  lan_services_bringup.sh
ciou_flte_factory_default/primary_web/: frame_setup.htm  login.asp  reboot_cpe.html
ciou_flte_factory_default/secondary_web/: frame_setup.htm  login.asp  reboot_cpe.html  upgradesuccess.html
ciou_flte_factory_default/startscripts/: S999setbootmode.sh  S99ciou_flte_show_version  bootmodeset.sh  rc.bringup_lan_start
ciou_flte_factory_default/startscripts_sec/: S73create_nodes.sh  S74ciouflte.sh  free_memorydis.sh  upgradeimage.sh
ciou_flte_patches/: I2CApp_hex  LEDDriver.ko  LTEManager  S71create_nodes.sh  S72ciouflte.sh  add_patch.sh  config_linux  config_openwrt  gphy_fe_fw_data.h  gphy_fw_fe.h  gpio_flte.ko  ifx_cgi_system_primary_backup.c  led_updater  node_codec.sh  node_gpio.sh  node_led.sh  tapidemopipe  tlv320aic34.ko
ciou_flte_patches/GRX288_UGW5.4_Telit_Driver/: option.c  qmi_wwan.c  qmi_wwan_v3.9r2e-for-linux-2.6.32.patch  uqmi.patch
config/: .mq_version
config/ARX188_GW_HE_ADSL_SAMPLE/: .config
config/ARX382_GW_EL_ADSL/: .config
config/ARX382_RT_EL_ADSL_SAMPLE/: .config
config/ARX388_GW_HE_ADSL_SAMPLE/: .config
config/FALCON_SFU_VOICE/: .config
config/GRX388_GW_HE_ETHWAN_LTE/: .config
config/GRX388_RT_HE_ETHWAN/: .config
config/VRX288_GW_HE_BOND_VDSL_SAMPLE/: .config
config/VRX288_GW_HE_VDSL_LTE/: .config
config/VRX388_GW_HE_VDSL_LTE/: .config
config/VRX388_GW_HE_VDSL_NON_BOND_LTE_SAMPLE/: .config
dl/: bison-2.4.3.tar.bz2  ffmpeg-0.5.4.tar.bz2  ipsec-tools-0.7.3.tar.bz2  lq-wave-300-03.02.03.01.25.3b077c8ba5b3.gpl.wls.src.tar.bz2  lq-wave-300-03.02.03.01.25.3b077c8ba5b3.rflib.wls.bin.tar.bz2  matrixssl-1.8.3.tar.bz2  pjproject-1.8.5.tar.bz2  racoon2-20100526a.tgz  usb-modeswitch-data-20110805.tar.bz2
include/: cmake.mk  image.mk  kernel-build.mk  kernel-defaults.mk  kernel-version.mk  kernel.mk  ltq-addons.mk  package-dumpinfo.mk  package-ipkg.mk  package-version-override.mk  package.mk  prereq-build.mk  prereq-make-install.mk  quilt.mk  shell.sh  subdir.mk  target.mk  toplevel.mk
include/config/: auto.conf  auto.conf.cmd
include/linux/: autoconf.h
kernel_config/: .config
package/: Makefile
package/FLTE_I2CApp/: Makefile
package/FLTE_I2CApp/files/: configurecodec  resetcodecconfig.sh
package/FLTE_I2CApp/src/: I2CApp_hex.c  Makefile
package/FLTE_LEDManager/: Makefile
package/FLTE_LEDManager/files/: LEDApp.sh
package/FLTE_LEDManager/src/: Makefile  led_updater.c  led_updater.h
package/FLTE_TestAllPeripherals/: Makefile
package/FLTE_deviceinfo_module/: Makefile
package/FLTE_gpio_driver/: Makefile
package/FLTE_gpio_i2c_driver/: Makefile
package/FLTE_led_driver/: Makefile
package/LTEManager/: Makefile
package/base-files/: Makefile
package/button-hotplug/: Makefile
package/compcache/: Makefile
package/feeds/ltq_voice_cpe/ifx-voice-cpe-tapidemo/src/: CHANGELOG  JUMPER  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.in  itm_version.h  tapidemo_config.h.in  tapidemo_version.h
package/feeds/ltq_voice_cpe/ifx-voice-cpe-tapidemo/src/doc/: doxyconfig  footer.html  stylesheet.css
package/feeds/ltq_voice_cpe/ifx-voice-cpe-tapidemo/src/m4/: aclocal-include.m4  board.m4  common.m4  daa.m4  dist.m4  duslic.m4  duslic_xt.m4  easy3201.m4  easy3332.m4  el.m4  kernel.m4  lib_ifxos.m4  lib_svip.m4  svip.m4  tapi.m4  td_macros.m4  ter.m4  vinetic.m4  vmmc.m4  vxt.m4
package/feeds/ltq_voice_cpe/ifx-voice-cpe-tapidemo/src/script/: prepare-vxworks-6-4.pl  prepare-vxworks-6-6.pl
package/feeds/ltq_voice_cpe/ifx-voice-cpe-tapidemo/src/src/: Makefile.am  Makefile.in  Makefile.inc  abstract.c  abstract.h  analog.c  analog.h  board_easy3111.c  board_easy3111.h  board_easy3201.c  board_easy3201.h  board_easy3332.c  board_easy3332.h  board_easy336.c  board_easy336.h  board_easy50510.c  board_easy50510.h  board_easy50712.c  board_easy50712.h  board_easy508xx.c  board_easy508xx.h  board_easy80800.c  board_easy80800.h  board_easy80910.c  board_easy80910.h  board_xt16.c  board_xt16.h  board_xwayXRX300.c  board_xwayXRX300.h  cid.c  cid.h  common.c  common.h  common_fxo.c  common_fxo.h  conference.c  conference.h  device_duslic_xt.c  device_duslic_xt.h  device_svip.c  (+50 more)
package/feeds/ltq_voice_cpe/ifx-voice-cpe-tapidemo/src/src/itm/: com_client.c  com_client.h  control_pc.c  control_pc.h  dev_help.c  dev_help.h
package/feeds/ltq_voice_cpe/ifx-voice-cpe-tapidemo/src/vxworks_6.4/: .project  .wrproject
package/feeds/ltq_voice_cpe/ifx-voice-cpe-tapidemo/src/vxworks_6.6/: .cproject  .project  .wrproject  .wrproject_xt
package/hotplug2/: Makefile
package/ifenslave/: Makefile
package/ipset/: Makefile
package/kernel/: Makefile
package/ltq-kpi2udp/: Makefile
package/ltq-tapi/: Config.in  Makefile
package/ltq-tapidemo/: Makefile
package/ltq-vmmc/: Makefile
package/madwifi/: Makefile
package/pjsip/: Makefile
package/spi-ks8995/: Makefile
package/spidev_test/: Makefile
package/uboot-envtools/: Makefile
package/udev/: Makefile
package/udevtrigger/: Makefile
package/wprobe/: Makefile
package/wrt55agv2-spidevs/: Makefile
scripts/: diffconfig.sh  download.pl  feeds  ltq_change_environment.sh  ltq_list_patches.pl
scripts/config/: conf  mconf
toolchain/: Config.in
toolchain/binutils/: Config.in  Makefile
toolchain/gcc/: Config.in  Config.version  Makefile
toolchain/uClibc/: Config.in  Config.version  Makefile
tools/: Makefile
tools/gmp/: Makefile
tools/linux-kbuild/: Makefile
tools/sparse/: Makefile
uboot/u-boot-2010.06/: Makefile  localversion-lantiq
vvdn/: 73m1966_io.h
(+1104 files in other folders)
